OSIS-2448 remove keyword in translation files

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -46,7 +46,7 @@ msgstr "Administrative data"
 msgid "advice"
 msgstr "Opinion"
 
-msgid "advice_missing_in_form"
+msgid "You must select one of the options"
 msgstr "You must select one of the options"
 
 msgid "age"
