--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -46,7 +46,7 @@ msgstr "Données administratives"
 msgid "advice"
 msgstr "Avis"
 
-msgid "advice_missing_in_form"
+msgid "You must select one of the options"
 msgstr "Vous devez sélectionner une des trois options"
 
 msgid "age"
