--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-08-26 15:02+0200\n"
+"POT-Creation-Date: 2019-11-07 13:03+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,8 +24,8 @@ msgstr " à la ligne numéro : "
 msgid "%% FTE"
 msgstr "%% FTE"
 
-msgid "(for the 2nd renewal)"
-msgstr "(pour le 2ème renouvellement)"
+msgid "(starting the 2nd renewal)"
+msgstr "(à partir du 2ème renouvellement)"
 
 msgid "A date is invalid in the file"
 msgstr "Une date est invalide dans le fichier"
@@ -254,9 +254,6 @@ msgstr "Date de début du contrat"
 
 msgid "Course units"
 msgstr "Unités de cours"
-
-msgid "Create an organization"
-msgstr "Créer une organisation"
 
 #, python-format
 msgid "Current positions outside the University and %% of time spent"
@@ -500,9 +497,6 @@ msgstr "Aucun fichier soumis"
 msgid "No promoter"
 msgstr "Pas de promoteur"
 
-msgid "No result"
-msgstr "Aucun résultat!"
-
 msgid "None"
 msgstr ""
 
@@ -695,9 +689,6 @@ msgstr ""
 msgid "Search by email or last name"
 msgstr "recherche par email ou nom de famille"
 
-msgid "Search for an organization"
-msgstr "Recherche une organisation"
-
 msgid "Select Excel file to inject mandates"
 msgstr "Choisir un fichier Excel pour injecter les mandats"
 
@@ -830,9 +821,6 @@ msgstr "Teaching document"
 
 msgid "Type"
 msgstr "Type"
-
-msgid "Types"
-msgstr "Types"
 
 msgid "Unfavourable"
 msgstr "Défavorable"
