OA-11 replace "éditer" by "modifier"

--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -313,7 +313,7 @@ msgid "Duration of contract (FTE)"
 msgstr "Durée contrat (ETP)"
 
 msgid "Edit"
-msgstr "Editer"
+msgstr "Modifier"
 
 msgid "Email"
 msgstr "Email"
