--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -449,7 +449,7 @@ msgid "List of publications in PDF format (DIAL)"
 msgstr "Liste de publications au format PDF (DIAL)"
 
 msgid "Logistics entity"
-msgstr ""
+msgstr "Entité logistique"
 
 msgid "Mail service management to assistants and Deans of Faculty"
 msgstr "Gestion de l'envoi des courriels aux assistants et doyens de faculté"
@@ -702,7 +702,7 @@ msgid "Search by email or last name"
 msgstr "recherche par email ou nom de famille"
 
 msgid "Sector"
-msgstr ""
+msgstr "Secteur"
 
 msgid "Select Excel file to inject mandates"
 msgstr "Choisir un fichier Excel pour injecter les mandats"
