OA-12 underline renewal state pdf line

--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -625,7 +625,7 @@ msgid "Refuse"
 msgstr "Décliner"
 
 msgid "Refused by the assistant"
-msgstr "Décliné par l'assistant"
+msgstr "Décliné par l'assistant·e"
 
 msgid "Registration number"
 msgstr "Matricule"
