--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-25 08:17+0200\n"
+"POT-Creation-Date: 2020-10-21 10:46+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -376,6 +376,14 @@ msgid "General comment"
 msgstr ""
 
 msgid "Generate a PDF file"
+msgstr ""
+
+msgid "Hello"
+msgstr ""
+
+msgid ""
+"I declare on my honour that all the information contained in this form has "
+"been verified and is correct"
 msgstr ""
 
 msgid "Import assistant mandates"
