OA-14 : two date field into form3 and academic_assistant

--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-21 11:29+0200\n"
+"POT-Creation-Date: 2020-10-21 11:44+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -290,6 +290,9 @@ msgstr "Date d'inscription au doctorat"
 
 msgid "Date of first nomination"
 msgstr "Date de la première nomination"
+
+msgid "Date of succeeded confirmation test"
+msgstr "Date de réussite de l'épreuve de confirmation"
 
 msgid "Dean of Faculty"
 msgstr "Doyen de faculté"
@@ -621,6 +624,9 @@ msgstr "Date d'impression"
 
 msgid "Prize(s) and/or distinction(s)"
 msgstr "Prix et/ou distinction(s)"
+
+msgid "Programmed date of confirmation test"
+msgstr "Date programmée de l'épreuve de confirmation"
 
 msgid "Promoter"
 msgstr "Promoteur"
