--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-25 12:14+0200\n"
+"POT-Creation-Date: 2021-06-25 13:33+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -357,6 +357,9 @@ msgid ""
 msgstr ""
 "Exercices, TP, séminaires - associés aux heures de volume 2, que vous "
 "assumez personnellement"
+
+msgid "Export"
+msgstr "Exporter"
 
 msgid "Export list of declined mandate assistants "
 msgstr "Exporter la liste des assistants avec mandat décliné"
