--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-25 13:33+0200\n"
+"POT-Creation-Date: 2021-10-25 14:42+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -803,6 +803,10 @@ msgstr "Assistant d'enseignement"
 
 msgid "The 'Doctorate' section must be completed"
 msgstr "La rubrique 'Doctorat' doit être complétée"
+
+msgid ""
+"The assistant in special renewal procedure will receive a different email"
+msgstr "Les assistants en renouvellement spécial recevront un email différent"
 
 msgid "The cols title are wrong."
 msgstr "Les titres des colonnes sont incorrects."
