--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-06-23 16:18+0200\n"
+"POT-Creation-Date: 2022-06-23 16:32+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -622,6 +622,9 @@ msgstr ""
 
 msgid "Please enter the number of hours per year"
 msgstr "Veuillez introduire le nombre d'heures par an"
+
+msgid "Please save your change in the form at first or cancel."
+msgstr "Veuillez sauvegarder vos changements d'abord ou annuler"
 
 msgid "Please select the XLSX file"
 msgstr "Veuillez sélectionner le fichier XLSX"
