--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -567,7 +567,7 @@ msgstr "Avis"
 
 msgid ""
 "Organization of seminars, conferences, visits, study tours, grounds, "
-"seminars… (not taken in account in the 'Teaching units' section)"
+"seminars... (not taken in account in the 'Teaching units' section)"
 msgstr ""
 "Organisation de stages, colloques, visites, voyages d’études, terrains, "
 "séminaires... (non pris en compte dans la section 'Unités d'enseignement')"
@@ -727,11 +727,11 @@ msgid "Scientific stay(s) and/or course(s)"
 msgstr "Séjour(s) et/ou stage(s) scientifiques"
 
 msgid ""
-"Scientific, pedagogical or other training you have attended (LLL, SMCS, "
+"Scientific, pedagogical or other training you have attended...(LLL, SMCS, "
 "RHUM, Summer School)"
 msgstr ""
 "Formations scientifiques, pédagogiques ou autres auxquelles vous avez "
-"participé (LLL, SMCS, RHUM, Summer School)"
+"participé... (LLL, SMCS, RHUM, Summer School)"
 
 msgid "Search by email or last name"
 msgstr "recherche par email ou nom de famille"
