corr-tests: contextualisation traductions communes de "Title"

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -795,6 +795,7 @@ msgstr ""
 msgid "This information will not be transmitted to the assistant"
 msgstr ""
 
+msgctxt "assistant"
 msgid "Title"
 msgstr ""
 
