OSIS 0A-47 : add message delete

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -20,6 +20,9 @@ msgstr ""
 msgid " at line number : "
 msgstr ""
 
+msgid " has been deleted"
+msgstr ""
+
 #, python-format
 msgid "%% FTE"
 msgstr "%% FTE"
