--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -20,6 +20,9 @@ msgstr ""
 msgid " at line number : "
 msgstr " à la ligne numéro : "
 
+msgid " has been deleted"
+msgstr " a été effacé"
+
 #, python-format
 msgid "%% FTE"
 msgstr "%% FTE"
