--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -921,6 +921,11 @@ msgid "You are connected as"
 msgstr "Vous êtes connecté en tant que"
 
 msgid ""
+"You have modified the form, please save your change before to delete the "
+"attached file."
+msgstr "Vous avez modifié le formulaire, veuillez sauvegarder vos changements avant de supprimer le fichier."
+
+msgid ""
 "You must add at least one teaching unit under the heading 'Teaching Units'"
 msgstr ""
 "Vous devez ajouter au moins une unité d'enseignement dans la rubrique "
